# cryptocurrency-cashier-android

./: .gitignore  README.md  build.gradle  settings.gradle
app/: .gitignore  CMakeLists.txt  build.gradle
app/src/main/: AndroidManifest.xml
app/src/main/jni/: com_achpay_wallet_utils_NativeMethods.cpp  com_achpay_wallet_utils_NativeMethods.h
app/src/main/res/anim/: expense_activity_close.xml  expense_activity_open.xml
app/src/main/res/drawable/: checkout_receipt_confirm.xml  checkout_receipt_unconfirm.xml  checkout_red_point.xml  checkout_search_background.xml  crypto_payment_background.xml  dash_line_grey.xml  dialog_background.xml  dialog_background_border.xml  dialog_download_background.xml  dialog_update_background.xml  login_background.xml  login_button_background.xml  login_edittext_background.xml  login_edtitext_background.xml  login_webview_progress.xml  menu_pick_bottom.xml  menu_pick_normal.xml  menu_pick_top.xml  receipt_rb_selector.xml  setting_confirm_background.xml  setting_quit_background.xml  setting_unconfirm_background.xml  single_checked_selector.xml  tablayout_indicator.xml  text_cursor.xml  text_cursor_bold.xml  text_cursor_login.xml  toast_background.xml  transaction_time_selector.xml  update_button_background.xml  webview_progress.xml  wechat_payment_disabled_background.xml  wechat_payment_enabled_background.xml
app/src/main/res/layout/: activity_about.xml  activity_account_detail.xml  activity_asset_detail.xml  activity_check_rate.xml  activity_coin_receipt.xml  activity_coin_type.xml  activity_grant_points.xml  activity_history.xml  activity_history_all.xml  activity_input.xml  activity_lightning_network.xml  activity_login.xml  activity_login_webview.xml  activity_main.xml  activity_order_detail.xml  activity_order_detail_new.xml  activity_qrcode_scan.xml  activity_register.xml  activity_scan_qrcode.xml  activity_search.xml  activity_setting.xml  activity_setting_about.xml  activity_setting_currency.xml  (+39 more)
(+241 files in other folders)
